--- a/style.css
+++ b/style.css
@@ -4,17 +4,18 @@
     font-size: 18px;
     font-family: 'Barlow', sans-serif;
     font-weight: 400;
-    /* overflow-x: hidden;  */
+    
 }
 
 .card{
     width: 1440px;
     height: 960px;
-    margin: auto;
-    display: flex;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     
+}
+.body-content{
+    display: flex;
 }
 
 .card:hover{
@@ -25,11 +26,14 @@ h1,nav{
     font-weight: 700;
 }
 .navigation{
-    text-align: center;
-    margin-bottom: 180px;
+    
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 40px;
     text-transform: uppercase;
     word-spacing: 40px;
     cursor: pointer;
+    padding: 80px;
 }
 a{
     text-decoration: none;
@@ -40,9 +44,9 @@ a:hover{
 }
 .bg{
     position: relative;
-    top: -252.5px;
-    left: 0px;
-    width: 108.1%;
+    bottom: 834px;
+    left: 720px;
+    width: 50%;
     height: 54%;
     border-radius: 0 0 0 25%;
     background-color: hsl(207, 33%, 95%);
@@ -120,17 +124,26 @@ button{
     border-radius: 5px;
     cursor: pointer;
 }
-.logo{
-    margin-bottom: 200px;
+.logo {
+    margin-left: -460px;
+    cursor: auto;
     
 }
+nav{
+    margin-right: -400px;
+}
+#icon{
+    display: none;
+}
 .crop{
- position: absolute;
+    position: relative;
+    left: 50px;
   width: 670px;
   height: 464px;
   overflow: hidden;
 }
 .crop img{
+    position: relative;
     width: 930px;
   height: 464px;
   margin: 0 -100px 0 0;
@@ -139,3 +152,80 @@ button{
 
 .attribution { font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
+
+@media screen and (max-width:375px){
+    nav{
+        display: none;
+        margin-right: 0px;
+    }
+}
+@media screen and (max-width:375px){
+    .card {
+        width: 196%;
+        height: 1550px;
+    }
+    .logo{
+        margin-left: 20px;
+    }
+    .logo img {
+        width: 3em;
+    }    
+    
+    .responsive {
+        position: absolute;
+        z-index: 1;
+        display: flex;
+        flex-direction: column;
+        width:  590px;
+        height: 460px;
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        text-align: center;
+        justify-content: space-evenly;
+        top: 200px;
+        background-color: white;
+        font-size: 30px;
+    }
+    .dot{
+        position: relative;
+    left: 50px;
+    width: 500px;
+    height: 1px;
+    color: hsl(207, 33%, 95%);
+    }
+    
+    .navigation{
+        margin-bottom: -20px;
+    }
+    #icon{
+        display: initial;
+        margin-left: 420px;
+        width: 500em;
+        height: 2em;
+        margin-top: 10px;
+        
+    }
+    
+   .body-content{
+       display: flex;
+       flex-direction: column-reverse;
+      
+   }
+   .bottom{
+    margin-top: 60px;
+   }
+    .crop{
+        width: 100%;
+    }
+    .crop img{
+        width: 137%
+
+    }
+    .bg{
+        width: 43%;
+        height: 800px;
+        left: 402px;
+        bottom: 1420px;
+        
+    }
+   
+}
